--- a/WireGuardTools/WireGuardTools.csproj
+++ b/WireGuardTools/WireGuardTools.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Core.Renci.SshNet" Version="2021.10.2" />
+    </ItemGroup>
+
 </Project>
